--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: linear-gradient(90deg, rgba(174,238,235,1) 0%, rgba(148,187,233,1) 100%);
+}
+
+.header_div {
+  position: relative;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+}
+
+.header_text_div {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+
+.header_text {
+  font-size: 45px;
+  height: 42px;
+  font-weight: bold;
+  color: gray;
+  -webkit-text-stroke: 3px rgb(66, 65, 65);
+}
+
+.bysimon {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(66, 65, 65);
+}
+
+.form_div {
+  height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.username_input {
+  display: block;
+  width: 230px;
+  height: 30px;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  border: 0;
+  border: 2px solid gray;
+  outline: none;
+}
+
+.password_input {
+  display: block;
+  width: 230px;
+  height: 30px;
+  border-radius: 8px;
+  border: 2px solid gray;
+  outline: none;
+}
+
+.form_button {
+  margin: auto;
+  width: 100px;
+  height: 30px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  background-color: white;
+  border: 2px solid rgb(66, 65, 65);
+  color: rgb(66, 65, 65);
+  outline: none;
+  margin-top: 15px;
+}
+
+.form_or {
+  color: rgb(66, 65, 65);
+  font-size: 20px;
+  margin-top: 15px;
+}
+
+.form_button-register{
+  width: 250px;
+}
+
+.username_input::placeholder, .password_input::placeholder {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.form_button:active {
+  background-color: gainsboro;
+}
+
+.username_input:focus, .password_input:focus {
+  border: 2px solid rgb(66, 65, 65);
 }
